# video-memory-maker

./: .gitignore  README.md  config.py  current_output.json  main.py  mitene_output.json  pyproject.toml
modules/: __init__.py  face_detector.py  face_identifier.py  face_selector_gui.py  scan_cache.py  title_generator.py  video_composer.py  video_loader.py
